# directory_structure_mcp

./: .gitignore  pyproject.toml
